--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/lib/bootstrap-4.2.1-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/lib/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="./assets/lib/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
     <title>僑光科技大學 多媒體與遊戲設計系 106屆 主視覺 煙謎</title>
